# Stirrup

./: .env.example  README.md  mkdocs.yml  pyproject.toml
docs/: concepts.md  index.md
docs/guides/: skills.md
examples/skills/: Dockerfile  sample_data.csv  skills_example.py
skills/data_analysis/: SKILL.md
skills/data_analysis/reference/: aggregations.md  loading.md  statistics.md  time_series.md  transformations.md  visualization.md
skills/data_analysis/scripts/: explore_data.py  summary_stats.py
src/stirrup/core/: agent.py
src/stirrup/skills/: __init__.py  skills.py
src/stirrup/tools/code_backends/: docker.py  e2b.py  local.py
